--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body{
     max-width: 1004px;
     width: 94%;
     margin: 0 auto;
-    background-image: url(/img/background-img.svg.svg);
+    background-image: url(/img/background-img.svg);
     background-repeat:no-repeat;
     background-position-x: 210px;
     background-position-y: 20px;
